--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 					<div id="raffle-box-intro" class="d-flex flex-column place-all-center w-100 h-100 p-5">
 						<img src="images/raffle-2.png" alt="raffle image" />
 
-						<div class="app-name mt-4 fs-1 text-uppercase">Raboxe</div>
-						<div class="mt-4 fs-4 text-center opacity-50">
+						<div class="app-name mt-4 display-2 text-uppercase">Raboxe</div>
+						<div class="mt-4 fs-1 text-center opacity-50">
 							Welcome to Raboxe, a mini raffle drawing system that helps with your random card generations
 						</div>
 						<div class="mt-5 text-center">
-							<button onclick="toggleModal()" class="btn btn-primary btn-native py-2 px-4 fs-5 text-white">Get Started</button>
+							<button onclick="toggleModal()" class="btn btn-primary btn-native py-2 px-4 fs-2 text-white">Get Started</button>
 						</div>
-						<div class="mt-5 fs-sm text-center text-muted opacity-50">
+						<div class="mt-5 fs-4 text-center text-muted opacity-50">
 							Made with <i class="mdi mdi-cards-heart text-danger"></i> in nigeria by lolu
 						</div>
 					</div>
 
 				</div>
 				<!-- top and bottom panes -->
-				<div id="raffleTopPane" class="app-name p-3 text-uppercase text-center d-none place-all-center fs-3">Raboxe</div>
+				<div id="raffleTopPane" class="app-name p-3 text-uppercase text-center d-none place-all-center display-2">Raboxe</div>
 				<div id="raffleBottomPane" class="p-3 text-center d-none place-all-center fs-4">
 					<button class="btn-icon-action d-flex place-all-center" onclick="attemptReshuffle()">
 						<i class="mdi mdi-shuffle-variant fs-2"></i>
@@ -58,16 +58,16 @@
 		    <div class="modal-content">
 		      <div class="modal-body p-4 d-flex flex-column place-all-center">
 						<i class="mdi mdi-pound text-dark opacity-25 display-1"></i>
-						<div class="mt-3 opacity-50 fs-5 text-center">
+						<div class="mt-3 opacity-50 fs-2 text-center">
 							Provide the number of cards to generate
 						</div>
 						<div class="mt-3">
-							<input type="number" id="noOfPlayers" class="form-control p-3 fs-5" placeholder="Number of cards" />
+							<input type="number" id="noOfPlayers" class="form-control p-3 fs-2" placeholder="Number of cards" />
 						</div>		        
 		      </div>
 		      <div class="modal-footer pt-0 pb-4 border-0 d-flex place-all-center">
-		        <button type="button" class="btn btn-light btn-native-light py-2 px-4 fs-5" data-bs-dismiss="modal">Close</button>
-		        <button type="button" class="btn btn-primary btn-native py-2 px-4 fs-5" onclick="generateRaffle()">Generate Raffle</button>
+		        <button type="button" class="btn btn-light btn-native-light py-2 px-4 fs-2" data-bs-dismiss="modal">Close</button>
+		        <button type="button" class="btn btn-primary btn-native py-2 px-4 fs-2" onclick="generateRaffle()">Generate Raffle</button>
 		      </div>
 		    </div>
 		  </div>
